--- a/docs/bibliografia.bib
+++ b/docs/bibliografia.bib
@@ -89,15 +89,16 @@
 
 % TU START
 
-@article{clopper_pearson_1934,
-  author  = {Clopper, Charles J. and Pearson, Egon S.},
-  title   = {The Use of Confidence or Fiducial Limits Illustrated in the Case of the Binomial},
-  journal = {Biometrika},
-  volume  = {26},
-  number  = {4},
-  pages   = {404--413},
-  year    = {1934},
-  doi     = {10.1093/biomet/26.4.404}
+@article{wilson_probable_nodate,
+  title    = {Probable {Inference}, the {Law} of {Succession}, and {Statistical} {Inference}},
+  language = {en},
+  author   = {Wilson, Edwin B},
+  journal  = {Journal of the American Statistical Association},
+  volume   = {22},
+  pages    = {209--212},
+  year     = {1927},
+  doi      = {10.1080/01621459.1927.10502953},
+  file     = {PDF:/Users/rasztabigab/Zotero/storage/92ASZCTJ/Wilson - Probable Inference, the Law of Succession, and Statistical Inference.pdf:application/pdf}
 }
 
 
@@ -137,20 +138,20 @@
 
 
 @misc{xu_cloudeval-yaml_2023,
-	title = {{CloudEval}-{YAML}: {A} {Practical} {Benchmark} for {Cloud} {Configuration} {Generation}},
-	shorttitle = {{CloudEval}-{YAML}},
-	url = {http://arxiv.org/abs/2401.06786},
-	doi = {10.48550/arXiv.2401.06786},
-	abstract = {Among the thriving ecosystem of cloud computing and the proliferation of Large Language Model (LLM)-based code generation tools, there is a lack of benchmarking for code generation in cloud-native applications. In response to this need, we present CloudEval-YAML, a practical benchmark for cloud configuration generation. CloudEval-YAML tackles the diversity challenge by focusing on YAML, the de facto standard of numerous cloud-native tools. We develop the CloudEval-YAML benchmark with practicality in mind: the dataset consists of hand-written problems with unit tests targeting practical scenarios. We further enhanced the dataset to meet practical needs by rephrasing questions in a concise, abbreviated, and bilingual manner. The dataset consists of 1011 problems that take more than 1200 human hours to complete. To improve practicality during evaluation, we build a scalable evaluation platform for CloudEval-YAML that achieves a 20 times speedup over a single machine. To the best of our knowledge, the CloudEval-YAML dataset is the first hand-written dataset targeting cloud-native applications. We present an in-depth evaluation of 12 LLMs, leading to a deeper understanding of the problems and LLMs, as well as effective methods to improve task performance and reduce cost. We release the dataset along with the evaluation framework at https://github.com/alibaba/CloudEval-YAML.},
-	language = {en},
-	urldate = {2025-12-20},
-	publisher = {arXiv},
-	author = {Xu, Yifei and Chen, Yuning and Zhang, Xumiao and Lin, Xianshang and Hu, Pan and Ma, Yunfei and Lu, Songwu and Du, Wan and Mao, Zhuoqing and Zhai, Ennan and Cai, Dennis},
-	month = nov,
-	year = {2023},
-	note = {arXiv:2401.06786 [cs]},
-	keywords = {Computer Science - Artificial Intelligence, Computer Science - Distributed, Parallel, and Cluster Computing},
-	file = {PDF:/Users/rasztabigab/Zotero/storage/WAX27VKJ/Xu et al. - 2023 - CloudEval-YAML A Practical Benchmark for Cloud Configuration Generation.pdf:application/pdf},
+  title      = {{CloudEval}-{YAML}: {A} {Practical} {Benchmark} for {Cloud} {Configuration} {Generation}},
+  shorttitle = {{CloudEval}-{YAML}},
+  url        = {http://arxiv.org/abs/2401.06786},
+  doi        = {10.48550/arXiv.2401.06786},
+  abstract   = {Among the thriving ecosystem of cloud computing and the proliferation of Large Language Model (LLM)-based code generation tools, there is a lack of benchmarking for code generation in cloud-native applications. In response to this need, we present CloudEval-YAML, a practical benchmark for cloud configuration generation. CloudEval-YAML tackles the diversity challenge by focusing on YAML, the de facto standard of numerous cloud-native tools. We develop the CloudEval-YAML benchmark with practicality in mind: the dataset consists of hand-written problems with unit tests targeting practical scenarios. We further enhanced the dataset to meet practical needs by rephrasing questions in a concise, abbreviated, and bilingual manner. The dataset consists of 1011 problems that take more than 1200 human hours to complete. To improve practicality during evaluation, we build a scalable evaluation platform for CloudEval-YAML that achieves a 20 times speedup over a single machine. To the best of our knowledge, the CloudEval-YAML dataset is the first hand-written dataset targeting cloud-native applications. We present an in-depth evaluation of 12 LLMs, leading to a deeper understanding of the problems and LLMs, as well as effective methods to improve task performance and reduce cost. We release the dataset along with the evaluation framework at https://github.com/alibaba/CloudEval-YAML.},
+  language   = {en},
+  urldate    = {2025-12-20},
+  publisher  = {arXiv},
+  author     = {Xu, Yifei and Chen, Yuning and Zhang, Xumiao and Lin, Xianshang and Hu, Pan and Ma, Yunfei and Lu, Songwu and Du, Wan and Mao, Zhuoqing and Zhai, Ennan and Cai, Dennis},
+  month      = nov,
+  year       = {2023},
+  note       = {arXiv:2401.06786 [cs]},
+  keywords   = {Computer Science - Artificial Intelligence, Computer Science - Distributed, Parallel, and Cluster Computing},
+  file       = {PDF:/Users/rasztabigab/Zotero/storage/WAX27VKJ/Xu et al. - 2023 - CloudEval-YAML A Practical Benchmark for Cloud Configuration Generation.pdf:application/pdf}
 }
 
 @inproceedings{kratzke_dont_2024,
@@ -638,7 +639,7 @@
 }
 
 @misc{lens_ide,
-  title        = {Lens IDE: zintegrowane środowisko programistyczne dla aplikacji LLM/Kubernetes},
+  title        = {Lens IDE: zintegrowane środowisko do zarządzania klastrami Kubernetes},
   howpublished = {IDE dla Kubernetes},
   url          = {https://docs.k8slens.dev/},
   language     = {en},
@@ -646,17 +647,17 @@
 }
 
 @misc{fastapi,
-  title        = {FastAPI: framework do tworzenia aplikacji webowych w Pythonie},
-  url          = {https://fastapi.tiangolo.com},
-  language     = {en},
-  urldate      = {2025-06-11}
+  title    = {FastAPI: framework do tworzenia aplikacji webowych w Pythonie},
+  url      = {https://fastapi.tiangolo.com},
+  language = {en},
+  urldate  = {2025-06-11}
 }
 
 @misc{coderabbit,
-  title        = {CodeRabbit improves code review accuracy with OpenAI o3, o4-mini, and GPT-4.1e},
-  url          = {https://openai.com/index/coderabbit/},
-  language     = {en},
-  urldate      = {2025-06-11}
+  title    = {CodeRabbit improves code review accuracy with OpenAI o3, o4-mini, and GPT-4.1e},
+  url      = {https://openai.com/index/coderabbit/},
+  language = {en},
+  urldate  = {2025-06-11}
 }
 
 @misc{streamlit,
@@ -699,7 +700,7 @@
   author   = {OpenAI},
   url      = {https://openai.com/index/introducing-gpt-5/},
   language = {en},
-  urldate  = {2025-10-27},
+  urldate  = {2025-10-27}
 }
 
 @misc{gpt5mini,
@@ -707,7 +708,7 @@
   author   = {OpenAI},
   url      = {https://openai.com/index/introducing-gpt-5/},
   language = {en},
-  urldate  = {2025-10-27},
+  urldate  = {2025-10-27}
 }
 
 % Nowe modele LLM - Anthropic
