--- a/docs/main.tex
+++ b/docs/main.tex
@@ -71,6 +71,7 @@ Celem niniejszej pracy magisterskiej jest zbadanie możliwości autonomicznego g
 
 W części badawczej sformułowano pięć hipotez badawczych (H1–H5) dotyczących: autonomicznej generacji funkcjonalnych konfiguracji, ograniczeń złożonościowych, jakości i zgodności z dobrymi praktykami, niezawodności procesu oraz podatności na manipulację kontekstem. Zaprojektowano dedykowany system testowy obejmujący agenta LLM z dostępem do jedenastu narzędzi analizy repozytorium, potok walidacyjny oraz infrastrukturę wykonawczą (MicroK8s). Przeprowadzono serię eksperymentów na rzeczywistych projektach z GitHub oraz pięciu kontrolowanych repozytoriach testowych o rosnącej złożoności. Dla hipotezy H3 zastosowano wielowarstwową walidację jakości: automatyczną analizę statyczną (Hadolint, Kube-linter), ocenę przez model językowy (LLM-as-a-Judge) oraz ocenę ekspercką. Wyniki eksperymentów poddano szczegółowej analizie statystycznej i jakościowej, prowadząc do weryfikacji wszystkich pięciu hipotez oraz sformułowania wniosków dotyczących praktycznej przydatności agentów LLM w kontekście automatyzacji DevOps.
 
+% TODO
 [TODO: Finalnie zaprezentowano praktyczne zastosowanie wypracowanych rozwiązań w postaci prototypowego systemu typu Platform as a Service (PaaS) demonstrującego automatyczne wdrażanie aplikacji kontenerowych.]
 
 \keywords Infrastructure as Code, LLM, agenty LLM, Kubernetes, Docker, automatyzacja, bezpieczeństwo, DevOps, weryfikacja hipotez, wielowarstwowa walidacja
@@ -85,6 +86,7 @@ The goal of this master's thesis is to investigate the capabilities of autonomou
 
 In the research phase, five research hypotheses (H1–H5) were formulated concerning: autonomous generation of functional configurations, complexity limitations, quality and compliance with best practices, process reliability and repeatability, and susceptibility to context manipulation. A dedicated testing system was designed, comprising an LLM agent with access to eleven repository analysis tools, a validation pipeline, and execution infrastructure (MicroK8s). A series of experiments was conducted on real-world GitHub projects and five controlled test repositories with increasing complexity. For hypothesis H3, a multi-layered quality validation approach was employed: automated static analysis (Hadolint, Kube-linter), LLM-as-a-Judge evaluation, and expert human evaluation. Experimental results were subjected to detailed statistical and qualitative analysis, leading to verification of all five hypotheses and formulation of conclusions regarding the practical utility of LLM agents in DevOps automation context.
 
+% TODO
 [TODO: Finally, a practical application of the developed solutions was presented in the form of a prototype Platform as a Service (PaaS) system demonstrating automatic containerized application deployment.]
 
 \secondkeywords Infrastructure as Code, Large Language Models, LLM agents, Kubernetes, Docker, Automation, Security, DevOps, Hypothesis verification, Multi-layered validation
