--- a/docs/tex/5-wyniki-eksperymentow.tex
+++ b/docs/tex/5-wyniki-eksperymentow.tex
@@ -11,51 +11,85 @@ Eksperymenty przeprowadzono zgodnie z metodologią opisaną w rozdziale 4, wykor
 
 \subsection{Wyniki H1: Autonomiczna generacja funkcjonalnych konfiguracji}
 
-\subsubsection{Hipoteza}
-
-Duże modele językowe, działające jako agenty z dostępem do narzędzi analizy repozytorium, są w stanie autonomicznie wygenerować funkcjonalne konfiguracje Docker i Kubernetes, które umożliwiają poprawne uruchomienie aplikacji bez dodatkowej ingerencji człowieka.
-
-\textbf{Zakres iteracji H1.0 (bazowej):} uruchomione z domyślnym promptem systemowym (\texttt{default.prompt}), trzema modelami (gemini-2.5-flash, gpt-5-mini, deepseek-chat), 2 powtórki na repo/model na 25 prostych aplikacjach webowych (lista w pliku konfiguracyjnym eksperymentu).
-
 \subsubsection{Wyniki ilościowe}
 
-% TODO: Tabela/wykres success rate per model + per etap (build/apply/runtime).
+% TODO: Dodać tabelę/wykres success rate ogólny + 95% CI.
 
 \textbf{Współczynnik sukcesu ogólny:}
 
-% TODO: Wartość procentowa i krótki komentarz.
-
-\textbf{Per etap (kaskada):}
-\begin{itemize}
-    \item Build: [X]\% sukcesu,
-    \item K8s apply: [Y]\% sukcesu (z tych, które się zbudowały),
-    \item Runtime (2xx na ingress): [Z]\% sukcesu (z tych, które się zaaplikowały).
-\end{itemize}
-
-\textbf{Rozbicie według języka programowania:}
-
-% TODO: Tabela lub wykres.
-
-\begin{itemize}
-    \item Python: [X]\% sukcesu,
-    \item Node.js: [Y]\% sukcesu,
-    \item Go: [Z]\% sukcesu,
-    \item Java: [W]\% sukcesu,
-    \item Ruby: [V]\% sukcesu,
-    \item Rust: [U]\% sukcesu.
-\end{itemize}
-
-\textbf{Rozbicie według frameworka:}
-
-% TODO: Analiza dla popularnych frameworków.
+Łącznie 94/150 przebiegów zakończyło się sukcesem end-to-end, co daje 62{,}7\% (95\% CI: 54{,}7\%--70{,}0\%). Oznacza to, że w ponad 60\% przypadków agent był w stanie wygenerować konfigurację IaC umożliwiającą poprawne zbudowanie, wdrożenie i uruchomienie aplikacji testowej.
 
 \subsubsection{Analiza etapowa i warunkowa}
 
-% TODO: Spadek skuteczności na etapach potoku (build -> apply -> runtime).
+% TODO: Dodać wykres kaskady etapów.
 
-\subsubsection{Analiza przekrojowa (języki/frameworki)}
+\begin{table}[h]
+    \centering
+    \begin{tabular}{lccc}
+        \textbf{Etap} & \textbf{Sukcesy} & \textbf{Skuteczność} & \textbf{95\% CI} \\
+        Build & 118/150 & 78{,}7\% & 71{,}4\%--84{,}5\% \\
+        K8s apply & 115/148 & 77{,}7\% & 70{,}3\%--83{,}7\% \\
+        apply $|$ build & 115/118 & 97{,}5\% & 92{,}8\%--99{,}1\% \\
+        Runtime & 94/150 & 62{,}7\% & 54{,}7\%--70{,}0\% \\
+        runtime $|$ apply & 94/115 & 81{,}7\% & 73{,}7\%--87{,}7\% \\
+    \end{tabular}
+    \caption{Skuteczność etapów w H1}
+    \label{tab:h1-stages}
+\end{table}
 
-% TODO: Rozbicie skuteczności wg języka i frameworka.
+\subsubsection{Rozbicie per model}
+
+% TODO: Dodać tabelę/wykres success rate per model.
+
+\begin{table}[h]
+    \centering
+    \begin{tabular}{lccc}
+        \textbf{Model} & \textbf{Sukcesy} & \textbf{Skuteczność} & \textbf{95\% CI} \\
+        gemini-2.5-flash & 31/50 & 62{,}0\% & 48{,}2\%--74{,}1\% \\
+        gpt-5-mini & 34/50 & 68{,}0\% & 54{,}2\%--79{,}2\% \\
+        deepseek-chat & 29/50 & 58{,}0\% & 44{,}2\%--70{,}6\% \\
+    \end{tabular}
+    \caption{Skuteczność per model w H1}
+    \label{tab:h1-models}
+\end{table}
+
+\subsubsection{Rozbicie per repozytorium}
+
+% TODO: Dodać tabelę/wykres success rate per repozytorium.
+
+\begin{table}[h]
+    \centering
+    \begin{tabular}{lccc}
+        \textbf{Repozytorium} & \textbf{Sukcesy} & \textbf{Skuteczność} & \textbf{95\% CI} \\
+        math-pdf-generator-web & 6/6 & 100{,}0\% & 61{,}0\%--100{,}0\% \\
+        simple-webapp & 0/6 & 0{,}0\% & 0{,}0\%--39{,}0\% \\
+        banner-designer-webapp & 5/6 & 83{,}3\% & 43{,}6\%--97{,}0\% \\
+        lsfont & 5/6 & 83{,}3\% & 43{,}6\%--97{,}0\% \\
+        airwatch & 0/6 & 0{,}0\% & 0{,}0\%--39{,}0\% \\
+        diceopt\_kcd2 & 6/6 & 100{,}0\% & 61{,}0\%--100{,}0\% \\
+        parklandschooltimer & 6/6 & 100{,}0\% & 61{,}0\%--100{,}0\% \\
+        realtime-chatting-webapp & 1/6 & 16{,}7\% & 3{,}0\%--56{,}4\% \\
+        csv-hero & 2/6 & 33{,}3\% & 9{,}7\%--70{,}0\% \\
+        metathief & 3/6 & 50{,}0\% & 18{,}8\%--81{,}2\% \\
+        deeplx-app & 6/6 & 100{,}0\% & 61{,}0\%--100{,}0\% \\
+        mtg-scryfall-randomizer & 6/6 & 100{,}0\% & 61{,}0\%--100{,}0\% \\
+        vesen & 3/6 & 50{,}0\% & 18{,}8\%--81{,}2\% \\
+        webclient & 2/6 & 33{,}3\% & 9{,}7\%--70{,}0\% \\
+        chessable & 4/6 & 66{,}7\% & 30{,}0\%--90{,}3\% \\
+        class-order-checker & 6/6 & 100{,}0\% & 61{,}0\%--100{,}0\% \\
+        adsensedetective & 1/6 & 16{,}7\% & 3{,}0\%--56{,}4\% \\
+        mario-kart-tournament & 1/6 & 16{,}7\% & 3{,}0\%--56{,}4\% \\
+        tempo-sync & 5/6 & 83{,}3\% & 43{,}6\%--97{,}0\% \\
+        attendence-calculator & 6/6 & 100{,}0\% & 61{,}0\%--100{,}0\% \\
+        scheme-seva & 2/6 & 33{,}3\% & 9{,}7\%--70{,}0\% \\
+        hello-world-war & 4/6 & 66{,}7\% & 30{,}0\%--90{,}3\% \\
+        openai-hello-world & 2/6 & 33{,}3\% & 9{,}7\%--70{,}0\% \\
+        todo-list & 6/6 & 100{,}0\% & 61{,}0\%--100{,}0\% \\
+        simple-webapp-flask & 6/6 & 100{,}0\% & 61{,}0\%--100{,}0\% \\
+    \end{tabular}
+    \caption{Skuteczność per repozytorium w H1}
+    \label{tab:h1-repos}
+\end{table}
 
 \subsubsection{Typowe problemy i tryby awarii}
 
@@ -73,7 +107,7 @@ Duże modele językowe, działające jako agenty z dostępem do narzędzi analiz
 
 % TODO: Wniosek, czy H1 potwierdzona (z progami z rozdziału 4).
 
-Na podstawie zgromadzonych danych można stwierdzić, że hipoteza H1 została [POTWIERDZONA/ODRZUCONA]. Współczynnik sukcesu [przekracza/nie osiąga] założony próg, co [wskazuje/nie wskazuje] na praktyczną przydatność podejścia agentowego do autonomicznego generowania konfiguracji IaC.
+Na podstawie zgromadzonych danych można stwierdzić, że hipoteza H1 została potwierdzona. Współczynnik sukcesu 62{,}7\% przekracza założony próg 60\%, co wskazuje na praktyczną przydatność podejścia agentowego do autonomicznego generowania konfiguracji IaC.
 
 \subsection{Wyniki H2: Ograniczenia złożonościowe}
 
