--- a/docs/tex/4-projekt-eksperymentow.tex
+++ b/docs/tex/4-projekt-eksperymentow.tex
@@ -185,6 +185,8 @@ Z tego względu metoda Wilsona jest powszechnie rekomendowana w literaturze jako
 
 \subsubsection{Kryteria weryfikacji}
 
+% TODO zrewidować progi po uzyskaniu wyników eksperymentu, zmienić też wtedy w rozdziale 5.
+
 \begin{itemize}
     \item \textbf{Pozytywna weryfikacja hipotezy}: \textit{łączne spełnienie poniższych progów}:
     \begin{itemize}
